<resources>
    <string name="app_name">AR_Programming</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-8046295810838892~9506977518</string>
    <string name="admob_unit_id_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_unit_id" translatable="false">ca-app-pub-8046295810838892/1531488413</string>
    <string name="preference_file_key">com.ar.ar_programming.PREFERENCE_FILE_KEY</string>
    <string name="saved_tutorial_key">TUTORIAL_KEY</string>
    <string name="saved_field_size_key">FIELD_SIZE_KEY</string>
    <string name="saved_difficulty_key">DIFFICULTY_KEY</string>
    <string name="saved_character_key">CHARACTER_KEY</string>
    <string name="saved_first_start_key" translatable="false">first_start</string>
    <string name="ar_fragment_label">AR プログラミング</string>
    <string name="menu_save">保存</string>
    <string name="none"></string>
    <string name="home_play">Play</string>
    <string name="home_how">遊び方</string>
    <string name="home_setting">Setting</string>
    <string name="how_to_play_ar">ARの始め方</string>
    <string name="how_to_block_operations">ブロック基本操作</string>
    <string name="what_is_exe_block">
        <![CDATA[
            実行ブロック\n
            とは？
        ]]>
    </string>
    <string name="what_is_loop_block">
        <![CDATA[
            ループブロック\n
            とは？
        ]]>
    </string>
    <string name="what_is_if_block">
        <![CDATA[
            ifブロック\n
            とは？
        ]]>
    </string>
    <string name="what_is_if_else_block">
        <![CDATA[
            if elseブロック\n
            とは？
        ]]>
    </string>
    <string name="what_is_if_elseif_block">
        <![CDATA[
            if elseif\n
            elseブロック\n
            とは？
        ]]>
    </string>
    <string name="setting_title">ゲーム設定</string>
    <string name="setting_stage_size">ステージサイズ</string>
    <string name="setting_stage_size_table">テーブルサイズ</string>
    <string name="setting_stage_size_living">リビングサイズ</string>
    <string name="setting_difficulty">難易度</string>
    <string name="setting_difficulty_easy">やさしめ</string>
    <string name="setting_difficulty_difficult">むずかしめ</string>
    <string name="setting_character">キャラクター</string>
    <string name="setting_character_animal">動物</string>
    <string name="setting_character_vehicle">乗り物</string>
    <string name="setting_dialog_title">保存確認</string>
    <string name="setting_dialog_contents">設定を保存しますか？</string>
    <string name="setting_dialog_positive">保存</string>
    <string name="setting_dialog_negative">いいえ</string>
    <string name="setting_dialog_cannot_title">
        <![CDATA[
            チュートリアルを終えると\n
            設定できるよ
        ]]>
    </string>
    <string name="setting_dialog_cannot_supplement">完了したチュートリアル</string>
    <string name="setting_dialog_cannot_tutorial_status"> / 6</string>
    <string name="stage_select_title">遊びたいステージを選ぼう！</string>
    <string name="stage_select_decision">Play！</string>
    <string name="setting_snackbar_message">保存しました</string>
    <string name="block_usable_title">使用できる数</string>
    <string name="block_set_volume_title">設定できる値</string>
    <string name="block_usable_no_limit">-</string>
    <string name="block_set_volume_free">自由!</string>
    <string name="block_set_volume_none">なし!</string>
    <string name="block_exe_forward">前へ進む</string>
    <string name="block_exe_back">後ろに戻る</string>
    <string name="block_exe_rotateright">右に回転</string>
    <string name="block_exe_rotateleft">左に回転</string>
    <string name="block_exe_eat">xxxを食べる</string>
    <string name="block_exe_throw">xxxを捨てる</string>
    <string name="block_exe_attack">目の前のxxxをやっつける</string>
    <string name="block_exe_farattack">離れた所にいるxxxをやっつける</string>
    <string name="block_exe_pickup">xxxを拾う</string>
    <string name="block_exe_changetarget">ターゲットを変更</string>
    <string name="block_loop_arrival">xxxに着くまでループ</string>
    <string name="block_loop_facing">xxxの方を向くまでループ</string>
    <string name="block_loop_collect">xxxを全て集めるまでループ</string>
    <string name="block_loop_defeat">xxxを全て倒すまでループ</string>
    <string name="block_loop_eat">xxxを全て食べるまでループ</string>
    <string name="block_if_front">もし 目の前にxxxがあれば</string>
    <string name="block_if_facing">もし xxxの方を向いていれば</string>
    <string name="block_if_defeat">もし xxxを倒していれば</string>
    <string name="block_if_nothing">もし 目の前に何もなければ</string>
    <string name="block_unit_walk">cm</string>
    <string name="block_unit_rotate">°</string>
    <string name="block_contents_else_id_prefix">そうではなく </string>
    <string name="process_volume_degree_error">!範囲外です(0～360)!</string>
    <string name="diable_set_volume">このブロックは変更できないよ</string>
    <string name="ar_menu_how_to_play">遊び方</string>
    <string name="ar_menu_setting">設定</string>
    <string name="ar_menu_clear_field">フィールドをクリア</string>
    <string name="ar_menu_init_programming">初めからプログラミング</string>
    <string name="ar_menu_goal_guide">ステージの説明をみる</string>
    <string name="ar_menu_select_stage">別のステージで遊ぶ</string>
    <string name="programming_top">Let\'s Programming!</string>
    <string name="goal_guide_view">
        <![CDATA[
            ステージの説明をみる！\n
            （タッチしてね）
        ]]>
    </string>
    <string name="snackbar_please_programming">プログラムを作ったらもう一度押してね</string>
    <string name="snackbar_please_place_stage">ステージを配置したら押してね</string>
    <string name="snackbar_please_finish_game">ゲーム終了後に押してね</string>
    <string name="snackbar_please_wait">もう少し待ってね</string>
    <string name="snackbar_please_return_home">エラー。。一度Homeに戻ってね</string>
    <string name="snackbar_field_placed">既に配置しているよ</string>
    <string name="tutorial_1">チュートリアル１\n～プログラミングをしてみよう～</string>
    <string name="tutorial_2">チュートリアル２\n～制限ブロックを学ぼう～</string>
    <string name="tutorial_3">チュートリアル３\n～ループブロックを学ぼう～</string>
    <string name="tutorial_4">チュートリアル４\n～条件ブロックを学ぼう(if)～</string>
    <string name="tutorial_5">チュートリアル５\n～条件ブロックを学ぼう(if-else)～</string>
    <string name="tutorial_6">チュートリアル６\n～条件ブロックを学ぼう(if-else if-else)～</string>
    <string name="chase_with_police_car">パトカーで追跡！</string>
    <string name="avoid_poison_mushroom">毒キノコは捨てよう</string>
    <string name="which_poison_mushroom">毒キノコはどれだろう？</string>
    <string name="present_for_rabbit">プレゼントをウサギへ届けよう</string>
    <string name="pickup_sweets_and_sweets_house">お菓子を拾ってお菓子の家へ</string>
    <string name="pickup_sweets_and_sweets_house_2">お菓子を拾ってお菓子の家へ２</string>
    <string name="banana_and_peel_on_bridge">バナナの皮に気を付けよう！</string>
    <string name="banana_and_peel_on_bridge_2">バナナの皮に気を付けよう！２</string>
    <string name="bee_and_honey">はちみつゲット！</string>
    <string name="eat_all_vegetable">野菜を全部たべよう！</string>
    <string name="defeat_crownghost">お化け退治！</string>
    <string name="defeat_crownghost_2">お化け退治！２</string>
    <string name="action_success">わーい！</string>
    <string name="action_failure">失敗\.\.\.</string>
    <string name="action_wait">待ち中！</string>
    <string name="action_walk_animal">とことこ</string>
    <string name="action_walk_vehicle">Boone！</string>
    <string name="action_rotate">向きかえよ～</string>
    <string name="action_eat">ムシャムシャ</string>
    <string name="action_throw">ポイッ！</string>
    <string name="action_attack">えいッ！</string>
    <string name="action_pickup">ゲット～</string>
    <string name="action_change_target">別のにしよ～</string>
    <string name="house">家</string>
    <string name="sweetHouse">お菓子の家</string>
    <string name="rabit">うさぎ</string>
    <string name="squirrel">リス</string>
    <string name="vegetable">野菜</string>
    <string name="sweets">お菓子</string>
    <string name="carrot">にんじん</string>
    <string name="mushroomPoison">毒きのこ</string>
    <string name="bee">ハチ</string>
    <string name="honey">はちみつ</string>
    <string name="donuts">ドーナッツ</string>
    <string name="chocolate">チョコレート</string>
    <string name="sportsCar">スポーツカー</string>
    <string name="yellowCar">黄色の車</string>
    <string name="signboardStop">看板</string>
    <string name="present">プレゼント</string>
    <string name="stamp">切り株</string>
    <string name="banana">バナナ</string>
    <string name="bananaPeel">バナナの皮</string>
    <string name="enemy">敵</string>
    <string name="ghost">お化け</string>
    <string name="ghostClown">ピエロお化け</string>
    <string name="ar_dialog_title">リトライ</string>
    <string name="ar_dialog_contents">ゲームを初めの状態に戻しますか？</string>
    <string name="ar_dialog_positive">やり直す</string>
    <string name="ar_dialog_negative">このまま</string>
    <string name="ar_dialog_goal_title">ゴール</string>
    <string name="ar_dialog_explanation_title">説明</string>
    <string name="ar_dialog_goal_close">閉じる</string>
    <string name="ar_dialog_success">ステージクリア！</string>
    <string name="ar_dialog_failure">失敗\.\.\.</string>
    <string name="ar_dialog_next_tutorial">次のチュートリアルへ</string>
    <string name="ar_dialog_play_another_stage">別のステージで遊ぶ！</string>
    <string name="ar_dialog_try">もう一度！</string>
    <string name="ar_dialog_break">休憩（ホームへ）</string>
    <string name="how_to_sample_head_message">
        <![CDATA[
            下にサンプルを載せてるよ\n
            どんな風にブロックが実行されるか\n
            参考にしてね！
        ]]>
    </string>
    <string name="how_to_ar_title">ARの遊び方</string>
    <string name="how_to_ar_explanation_1">
        <![CDATA[
            ARカメラが起動したら\n
            まずはカメラで身の回りにある\n
            平面なところを映してみよう！
        ]]>
    </string>
    <string name="how_to_ar_explanation_2">
        <![CDATA[
            カメラが平面を認識すると\n
            「白いドット」が表示されるから\n
            そのドットをタッチしてね！\n
            真っ白な机や床は平面だと認識しずらいから、\n
            もしドットが表示されないなら、\n
            少し柄のある場所を映してみてね。
        ]]>
    </string>
    <string name="how_to_ar_explanation_3">
        <![CDATA[
            タッチしたところに\n
            ARでゲームのステージが出現するよ。\n
            それが君が挑戦するステージだ！
        ]]>
    </string>
    <string name="how_to_ar_explanation_4">
        <![CDATA[
            クリアの条件やステージの説明も\n
            ステージの上に表示されてるから、\n
            確認したらブロックプログラミングに挑戦しよう！
        ]]>
    </string>
    <string name="how_to_block_operation_title">プログラミングの仕方</string>
    <string name="how_to_block_operation_explanation">
        <![CDATA[
            プログラミングのやり方を説明していくよ。\n
            このアプリでは、プログラミングは\n
            ブロックを組み合わせて行っていくんだ。\n
            次のページから基本的なやり方が書いてあるから、\n
            順番に読んでいってね。
        ]]>
    </string>
    <string name="how_to_add_block_title">ブロック追加のやり方</string>
    <string name="how_to_add_block_explanation">
        <![CDATA[
            プログラミング画面下にある\n
            横に並んだブロックをタッチすると\n
            「下矢印のあるブロック」の下に追加されるよ
        ]]>
    </string>
    <string name="how_to_move_block_title">ブロック移動のやり方</string>
    <string name="how_to_move_block_explanation">
        <![CDATA[
            ブロックを「今とは別のブロックの下」\n
            に移動したい場合は、\n
            ドラッグ\＆ドロップを使おう
        ]]>
    </string>
    <string name="how_to_remove_block_title">ブロック削除のやり方</string>
    <string name="how_to_remove_block_explanation">
        <![CDATA[
            いらないブロックは、\n
            ドラッグ＆ドロップで右上のごみ箱に持っていこう。\n
            作成したプログラムから削除することができるよ。
        ]]>
    </string>
    <string name="how_to_set_volume_title">ブロック処理量の設定</string>
    <string name="how_to_set_volume_explanation">
        <![CDATA[
            ブロックによっては\n
            自分で処理の量を決める必要があるよ。\n
            ブロック上の数値をタッチすると設定できるから、\n
            ステージをよく見て値を設定しよう！
        ]]>
    </string>
    <string name="how_to_about_limit_title">ブロックの制限</string>
    <string name="how_to_about_limit_explanation">
        <![CDATA[
            ステージによっては\n
            ブロックを使用できる数や\n
            設定できる値に制限がある場合があるよ。\n
            そういったステージではちょっと工夫が必要になるから、\n
            うまく制限の範囲でプログラミングしてね。
        ]]>
    </string>
    <string name="how_to_about_exe_block_title">実行ブロックとは？</string>
    <string name="how_to_about_exe_block_explanation">
        <![CDATA[
            キャラクターに特定の行動をさせるブロックだよ。\n
            うまく組み合わせてARのステージをクリアしよう！
        ]]>
    </string>
</resources>