<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ar.ar_programming.ARActivity">

    <item
        android:id="@+id/action_how_to_play"
        android:orderInCategory="100"
        android:title="@string/ar_menu_how_to_play"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_field"
        android:orderInCategory="100"
        android:title="@string/ar_menu_clear_field"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_init_programming"
        android:orderInCategory="100"
        android:title="@string/ar_menu_init_programming"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_setting"
        android:orderInCategory="100"
        android:title="@string/ar_menu_setting"
        app:showAsAction="never" />


</menu>