<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_parent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:background="@drawable/frame_block_exe"
    tools:context=".ARActivity">

    <ImageView
        android:id="@+id/iv_blockImage"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:maxLines="1"
        android:text="前進"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/iv_blockImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/v_border"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/tx_border_in_block"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_usableTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/block_usable_title"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/v_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/v_borderVertical"/>

    <TextView
        android:id="@+id/tv_usableNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:text="@string/block_usable_no_limit"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/tv_usableTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/v_borderVertical"/>

    <View
        android:id="@+id/v_borderVertical"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:background="@color/tx_border_in_block"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_setVolumeTitle"
        app:layout_constraintStart_toEndOf="@id/tv_usableTitle"
        app:layout_constraintTop_toBottomOf="@id/v_border" />

    <TextView
        android:id="@+id/tv_setVolumeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:text="@string/block_set_volume_title"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/v_border"
        app:layout_constraintStart_toEndOf="@id/v_borderVertical"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_setVolumeNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="12dp"
        android:text="@string/block_set_volume_none"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/tv_setVolumeTitle"
        app:layout_constraintStart_toEndOf="@id/v_borderVertical"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>